[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/interface/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://src/fonts/The-Fozderien.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/fonts/JetpackJoe.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://src/interface/Images/background-blur.png" type="Texture" id=4]
[ext_resource path="res://src/interface/HowToPlayMenu.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.54902 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="DynamicFont" id=7]
size = 26
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.133333, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.133333, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.6, 0.6, 0.133333, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.2, 0, 0.266667, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="DynamicFont" id=9]
size = 46
font_data = ExtResource( 3 )

[node name="MainMenu" type="Node"]
script = ExtResource( 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.5, 1 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 527, 222 )
scale = Vector2( 3.66095, 2.99062 )
texture = ExtResource( 4 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DarkOpacity" type="Panel" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainPanel" type="Panel" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -150.0
margin_right = 120.0
margin_bottom = 150.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="Control/MainPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -12.0
margin_right = 100.0
margin_bottom = 12.0
rect_pivot_offset = Vector2( -91, -31 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0.933333, 0.933333, 0.933333, 1 )
custom_colors/font_color = Color( 0.933333, 0.933333, 0.933333, 1 )
custom_colors/font_color_hover = Color( 0.933333, 0.933333, 0.933333, 1 )
custom_colors/font_color_pressed = Color( 0.933333, 0.933333, 0.933333, 1 )
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 3 )
text = "JUGAR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="Control/MainPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = 53.0
margin_right = 100.0
margin_bottom = 77.0
rect_pivot_offset = Vector2( -91, -31 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0.933333, 0.933333, 0.933333, 1 )
custom_colors/font_color = Color( 0.933333, 0.933333, 0.933333, 1 )
custom_colors/font_color_hover = Color( 0.933333, 0.933333, 0.933333, 1 )
custom_colors/font_color_pressed = Color( 0.933333, 0.933333, 0.933333, 1 )
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 3 )
text = "SALIR DEL JUEGO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/MainPanel"]
margin_left = 20.0
margin_top = 20.0
margin_right = 220.0
margin_bottom = 114.0
custom_colors/font_color = Color( 0.933333, 0.933333, 0.933333, 1 )
custom_fonts/font = SubResource( 9 )
text = "XIRUNTIA"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HowToPlayButton" type="Button" parent="Control/MainPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = 21.0
margin_right = 100.0
margin_bottom = 45.0
rect_pivot_offset = Vector2( -91, -31 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0.933333, 0.933333, 0.933333, 1 )
custom_colors/font_color = Color( 0.933333, 0.933333, 0.933333, 1 )
custom_colors/font_color_hover = Color( 0.933333, 0.933333, 0.933333, 1 )
custom_colors/font_color_pressed = Color( 0.933333, 0.933333, 0.933333, 1 )
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 3 )
text = "COMO JUGAR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HowToPlayMenu" parent="." instance=ExtResource( 5 )]

[connection signal="pressed" from="Control/MainPanel/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Control/MainPanel/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="Control/MainPanel/HowToPlayButton" to="." method="_on_HowToPlayButton_pressed"]
